--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-recursive-include src/menhir/contenttype/image *.txt *.py *.zcml *.po *.mo *.png *.pt
+recursive-include src/menhir/contenttype/image *.txt *.py *.zcml *.po *.mo *.png *.pt *.js
 recursive-include docs *.txt
