Updated to use fanstatic

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,12 +1,12 @@
 [buildout]
 develop = .
 parts = test
-extends = http://grok.zope.org/releaseinfo/grok-1.1.1.cfg
+extends = http://grok.zope.org/releaseinfo/1.2.1/versions.cfg
 versions = versions
 newest = false
 
-
 [versions]
+megrok.pagetemplate = 0.5
 zope.component = 3.9.1
 grokcore.view = 1.13.5
 
